test/zora/fixtures/plan_return_not_enough_fail_out.txt
TAP version 13
# Return .plan, don't execute enough tests
ok 1 should be truthy
ok 2 should be truthy
file://$TAPE/index.js:$LINE
  function rethrow () { throw err }
                        ^

Error: Test ended before the planned number
          planned: 3
          actual: 2
          
    at Test.run (file://$TAPE/index.js:$LINE:$COL)
    at async TestRunner.run (file://$TAPE/index.js:$LINE:$COL)
    